library/database_universe/test/errors/property/unsupported_type.dart
// unsupported type

import 'package:database_universe/database_universe.dart';

@collection
class Model {
  late int id;

  late Set<String>? prop;
}
